projeto/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Java\jdk1.7.0_02\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files (x86)\Greenfoot\lib\extensions\greenfoot.jar;C:\Program Files (x86)\Greenfoot\lib\bluejcore.jar;C:\Program Files (x86)\Greenfoot\lib\bluejeditor.jar;C:\Program Files (x86)\Greenfoot\lib\bluejext.jar;C:\Program Files (x86)\Greenfoot\lib\AppleJavaExtensions.jar;C:\Program Files (x86)\Greenfoot\lib\junit-4.8.2.jar;C:\Program Files (x86)\Greenfoot\lib\bluej.jar;C:\Program Files (x86)\Greenfoot\lib\commons-httpclient-3.1.jar;C:\Program Files (x86)\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files (x86)\Greenfoot\lib\commons-codec-1.3.jar;C:\Program Files (x86)\Greenfoot\lib\jl1.0.1.jar;C:\Program Files (x86)\Greenfoot\lib\opencsv-2.3.jar;D:\RAH\FACULDADE\4periodo\ProgObj (POO)\Projetos\projeto
-d
D:\RAH\FACULDADE\4periodo\ProgObj (POO)\Projetos\projeto\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\Greenfoot\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
D:\RAH\FACULDADE\4periodo\ProgObj (POO)\Projetos\projeto\Monstro.java
<---- end of javadoc command ---->
Loading source file D:\RAH\FACULDADE\4periodo\ProgObj (POO)\Projetos\projeto\Monstro.java...
D:\RAH\FACULDADE\4periodo\ProgObj (POO)\Projetos\projeto\Monstro.java:88: error: illegal start of expression
        else if(){
                ^
1 error
